terraform/modules/vpc/main.tf
resource "aws_vpc" "vpc" {
    cidr_block = var.cidr_block
    tags = {
        Name = var.vpc_name
        env = var.env
    }
    enable_dns_support   = true
    enable_dns_hostnames = true
}

resource "aws_subnet" "subnet" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.subnet_cidr_block
    availability_zone = var.availability_zone
    map_public_ip_on_launch = true
    tags = var.tags
}

resource "aws_subnet" "subnet2" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.subnet_cidr_block2
    availability_zone = var.availability_zone2
    map_public_ip_on_launch = true
    tags = var.tags
}

resource "aws_subnet" "private_subnet" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_subnet_cidr_block
    availability_zone = var.availability_zone
    map_public_ip_on_launch = false
    tags = {
        Name = "${var.vpc_name}-private-subnet"
    }
}

resource "aws_subnet" "private_subnet2" {
    vpc_id = aws_vpc.vpc.id
    cidr_block = var.private_subnet_cidr_block2
    availability_zone = var.availability_zone2
    map_public_ip_on_launch = false
    tags = {
        Name = "${var.vpc_name}-private-subnet-2"
    }
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.vpc.id
    tags = {
        Name = "${var.vpc_name}-igw"
        env = var.env
    }
}

resource "aws_eip" "nat_a" {
    domain = "vpc"
}

resource "aws_nat_gateway" "nat_1" {
    allocation_id = aws_eip.nat_a.id
    subnet_id = aws_subnet.subnet.id
}

resource "aws_eip" "nat_b" {
    domain = "vpc"
}

resource "aws_nat_gateway" "nat_2" {
    allocation_id = aws_eip.nat_b.id
    subnet_id = aws_subnet.subnet2.id
}


resource "aws_route_table" "route_table" {
    vpc_id = aws_vpc.vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }
    tags = {
        Name = "${var.vpc_name}-route-table"
    }
}

resource "aws_route_table_association" "rta" {
    subnet_id = aws_subnet.subnet.id
    route_table_id = aws_route_table.route_table.id
}

resource "aws_route_table_association" "rta2" {
    subnet_id = aws_subnet.subnet2.id
    route_table_id = aws_route_table.route_table.id
}

resource "aws_route_table" "private_table" {
    vpc_id = aws_vpc.vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_1.id
    }
    tags = {
        Name = "${var.vpc_name}-private-table"
    }
}

resource "aws_route_table_association" "private_rta" {
    subnet_id = aws_subnet.private_subnet.id
    route_table_id = aws_route_table.private_table.id
}

resource "aws_route_table" "private_table2" {
    vpc_id = aws_vpc.vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.nat_2.id
    }
    tags = {
        Name = "${var.vpc_name}-private-table2"
    }
}

resource "aws_route_table_association" "private_rta2" {
    subnet_id = aws_subnet.private_subnet2.id
    route_table_id = aws_route_table.private_table2.id
}
